--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3498db</color>
     <color name="colorPrimaryDark">#2980b9</color>
-    <color name="colorAccent">#9b59b6</color>
+    <color name="colorAccent">#e74c3c</color>
     <color name="colorWhite">#ecf0f1</color>
     <color name="colorBlack">#2c3e50</color>
     <color name="colorDanger">#ed1c16</color>
